force-app/main/default/objects/Survey_Question_Assignment__c/Survey_Question_Assignment__c.object-meta.xml
<CustomObject>
    <label>Survey Question Assignment</label>
    <nameField>
        <displayFormat>SQA-{000000}</displayFormat>
        <label>Survey Question Assignment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Question Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>