force-app/main/default/objects/Survey_Question_Assignment__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <inlineHelpText>Identifies the order the questions are displayed in the survey. If left blank the questions are displayed in the order they were created.</inlineHelpText>
    <label>Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>