force-app/main/default/objects/Survey_Question_Assignment__c/fields/Question_Prompt__c.field-meta.xml
<CustomField>
    <fullName>Question_Prompt__c</fullName>
    <formula>Survey_Question__r.Prompt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Question Prompt</label>
    <type>Text</type>
</CustomField>