force-app/main/default/objects/Survey_Question_Assignment__c/fields/Question_Type__c.field-meta.xml
<CustomField>
    <fullName>Question_Type__c</fullName>
    <formula>TEXT(Survey_Question__r.Question_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Question Type</label>
    <type>Text</type>
</CustomField>