force-app/main/default/objects/Survey_Question_Assignment__c/fields/Require_More_Detail__c.field-meta.xml
<CustomField>
    <fullName>Require_More_Detail__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Require the survey recipient to provide additional detail if and when prompted.</inlineHelpText>
    <label>Require More Detail</label>
    <type>Checkbox</type>
</CustomField>