force-app/main/default/objects/Survey_Question_Assignment__c/fields/Require_Response__c.field-meta.xml
<CustomField>
    <fullName>Require_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Require the survey recipient to answer the question.</inlineHelpText>
    <label>Require Response</label>
    <type>Checkbox</type>
</CustomField>