force-app/main/default/objects/Survey_Question_Assignment__c/fields/Survey_Question__c.field-meta.xml
<CustomField>
    <fullName>Survey_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey Question</label>
    <referenceTo>Survey_Question__c</referenceTo>
    <relationshipLabel>Survey Assignments</relationshipLabel>
    <relationshipName>Survey_Question_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>