force-app/main/default/objects/Survey_Question_Assignment__c/fields/When_To_Display__c.field-meta.xml
<CustomField>
    <fullName>When_To_Display__c</fullName>
    <defaultValue>&quot;Always&quot;</defaultValue>
    <label>When To Display</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Always</fullName>
            </value>
            <value>
                <fullName>For Positive Feedback</fullName>
            </value>
            <value>
                <fullName>For Neutral Feedback</fullName>
            </value>
            <value>
                <fullName>For Negative Feedback</fullName>
            </value>
            <value>
                <fullName>For Positive or Negative Feedback</fullName>
            </value>
            <value>
                <fullName>For Positive or Neutral Feedback</fullName>
            </value>
            <value>
                <fullName>For Negative or Neutral Feedback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>